# lineagekit

./: .buildinfo  .gitignore  MANIFEST.in  README.md  abstract_pedigree.html  coalescent_tree.html  gen_graph.html  genindex.html  index.html  kinship.html  kinship.pyi  objects.inv  pedigree.html  ploid_pedigree.html  py-modindex.html  quickstart.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py
.doctrees/: abstract_pedigree.doctree  coalescent_tree.doctree  environment.pickle  gen_graph.doctree  index.doctree  kinship.doctree  pedigree.doctree  ploid_pedigree.doctree  quickstart.doctree
.doctrees/use_cases/: ascending_genealogy.doctree  index.doctree  kinship.doctree
.github/workflows/: docs.yml  main.yml  publish.yml
_sources/: abstract_pedigree.rst  coalescent_tree.rst  gen_graph.rst  index.rst  pedigree.rst  ploid_pedigree.rst  quickstart.rst
_sources/use_cases/: ascending_genealogy.rst  index.rst
docs/: requirements.txt
docs/source/: coalescent_tree.rst  conf.py  index.rst  kinship.rst  ploid_pedigree.rst  quickstart.rst
src/basic/: AbstractPedigree.py  CoalescentTree.py  GenGraph.py  Pedigree.py  PloidPedigree.py  descendant_cache.py  descendant_memory_cache.py  genealogical_graph.py  kinship.cpp  setup.py  simple_graph.py
src/utility/: utility.py
test/: basic_test.py  test_contribution_factor.py  test_kinship.py
test/kinship_test/: 100_6.pedigree  500_10.pedigree  kinship_test.pedigree  kinship_test_2.pedigree
test/test_data/: coalescent_tree_1.txt  (+2 more)
use_cases/: ascending_genealogy.html  index.html  kinship.html
(+38 files in other folders)
