[metadata]
name = lineagekit
version = 1.0.14
description = A python library with genealogy methods
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.9
package_dir=
    = src
packages=find:
zip_safe = False
include_package_data = True
install_requires =
    tskit>=0.5.6
    networkx>=3.2.1
    matplotlib>=3.8.3
    pytest>=8.0.2
    pandas>=2.0.0
    numpy>=1.26.4
    pybind11>=2.12.0
    setuptools>=78.1.1
    pip>=24.0
    attrs>=23.2.0
    pillow>=10.3.0
    docutils>=0.20.1
    Sphinx>=7.2.6
    sphinx-autodoc-typehints>=1.12.0
    sphinxcontrib-napoleon>=0.7
    Jinja2>=3.1.3
    typing_extensions>=4.10.0
    pytz>=2024.1
    Cython>=3.0.10
    numba>=0.59.1
    svgwrite>=1.4.3
    jsonschema>=4.21.1
    MarkupSafe>=2.1.5
    python-dateutil>=2.9.0.post0
    six>=1.16.0
    referencing>=0.33.0
    idna>=3.6
    packaging>=23.2
    zipp>=3.18.0
    scipy>=1.13.0

[options.packages.find]
where = src
